--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
