--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URI = mongodb+srv://tuan3669:tuan0935222925@cluster0.hs0wdpg.mongodb.net/?retryWrites=true&w=majority
+DB_URI = mongodb+srv://doan2:ugfKheQaKRTaKRzA@cluster0.g11gr6a.mongodb.net/?retryWrites=true&w=majority
