--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.34.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -20,7 +21,10 @@
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "joi": "^17.8.3",
-    "mongoose": "^6.9.2"
+    "moment": "^2.29.4",
+    "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
