--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_URI = mongodb+srv://doan2:ugfKheQaKRTaKRzA@cluster0.g11gr6a.mongodb.net/?retryWrites=true&w=majority
-
+ACCESS_TOKEN_SECRET = 'ACCESS_TOKEN_SECRET'
+REFRESH_TOKEN_SECRET = 'REFRESH_TOKEN_SECRET'
 
 CLOUDINARY_NAME=drwqu9gza
 CLOUDINARY_KEY=677154543242586
