--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "read-vietnamese-number": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
