--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REFRESH_TOKEN_SECRET = 'REFRESH_TOKEN_SECRET'
 CLOUDINARY_NAME=drwqu9gza
 CLOUDINARY_KEY=677154543242586
 CLOUDINARY_SECRET=J5YfuQivxGz-8j5XwSy0SfxJu9M
+
+
+EMAIL_NAME = huynhanhtuan2k2@gmail.com
+EMAIL_APP_PASSWORD = pawaztnhcpgqvfce
