--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "qs": "^6.11.1",
     "read-vietnamese-number": "^1.9.0"
