--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.34.0",
     "connect-flash": "^0.1.1",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
