--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.34.0",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^7.1.0",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
