--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "geolib": "^3.3.4",
     "http-errors": "^2.0.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
